--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,70 @@
 #titulo{
     border-radius: 10px ;
     background: linear-gradient(to bottom right, #FFA500, #FF0000);
-    border-style: inset;
-    border: none;
     padding: 10px;
     text-align: center;
     font-family: Ninja Naruto V1;
+    border-style: inset;
+    border: none;
 }
 a {
     text-decoration: none;
+    color: black;
 }
+
+.menu{
+    border-style: inset;
+    border-radius: 10px;
+    background: #12db196b;
+    border: none;
+    width: 400px;
+}
+
+#pergunta{
+    font-family: Ninja Naruto V1;
+    border-style: inset;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    background: linear-gradient(to bottom right, #FFA500, #FF0000);
+    width: 600px;
+    text-align: center;
+}
+
+.opcoes{
+    margin-left: 50px;
+    margin-top: 50px;
+    width: 515px;
+    
+}
+
+.opcao{
+    background-color:orange ; /* Cor de fundo */
+    color: black; /* Cor do texto */
+    padding: 10px 20px; /* Espaçamento interno */
+    border: none; /* Sem borda */
+    border-radius: 4px; /* Cantos arredondados */
+    cursor: pointer; /* Cursor de mão ao passar por cima */
+    font-size: 16px;
+    display: block;
+    margin-bottom: 30px;
+    width: 200px;
+    font-family: Ninja Naruto V1;
+    margin-left: 160px;
+}
+
+.opcao:hover{
+    background-color: #12db18;
+}
+
+.quiz{
+    margin-bottom: 90px;
+    border-style: inset;
+    border-radius: 10px;
+    background: #12db196b;
+    border: none;
+}
+
 
 .container {
     background-image: url('../img/NaruSasu.jpg');
@@ -21,13 +76,26 @@ a {
     align-items: center; /* Centraliza verticalmente */
     width: 100%; /* Define a largura do container */
     height: 100vh; /* Define a altura do container como 100% da altura da viewport */
-    border: 1px 
+    border: 1px; 
+}
+
+.flex-container{
+    background-image: url(../img/Vila\ oculta\ da\ folha.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 10px;
+    display: flex; /* Define o container como um flex container */
+    justify-content: center; /* Centraliza horizontalmente */
+    align-items: center; /* Centraliza verticalmente */
+    width: 100%; /* Define a largura do container */
+    height: 100vh; /* Define a altura do container como 100% da altura da viewport */
+    border: 1px; 
 }
 
 .botoes{
-    padding-top: 150px;
+    padding-top: 50px;
     width: 90px;
-    margin-left: 20px;
+    margin-left: 100px;
 }
 
 .botao{
