Quiz funcionando 100% + audio nas opcoes + Acessibilidade nos textos

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 #titulo{
-    border-radius: 10px ;
     background: linear-gradient(to bottom right, #FFA500, #FF0000);
+    color: white;
     padding: 10px;
     text-align: center;
     font-family: Ninja Naruto V1;
@@ -9,7 +9,7 @@
 }
 a {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 .menu{
@@ -20,27 +20,68 @@ a {
     width: 400px;
 }
 
+#resultado{
+    background-color:rgb(4, 49, 199) ; /* Cor de fundo */
+    color: white; /* Cor do texto */
+    padding: 10px 20px; /* Espaçamento interno */
+    border: none; /* Sem borda */; /* Cantos arredondados */
+    cursor: pointer; /* Cursor de mão ao passar por cima */
+    font-size: 20px;
+    display: none;
+    width: 200px;
+    font-family: Ninja Naruto V1;
+}
+
 #pergunta{
     font-family: Ninja Naruto V1;
+    color: white;
     border-style: inset;
     padding: 10px;
-    border-radius: 10px;
     border: none;
     background: linear-gradient(to bottom right, #FFA500, #FF0000);
     width: 600px;
     text-align: center;
+    font-size: 26px;
+}
+
+#mensagem {
+    background-color:rgb(4, 49, 199) ; /* Cor de fundo */
+    color: white; /* Cor do texto */
+    padding: 10px 20px; /* Espaçamento interno */
+    border: none; /* Sem borda */; /* Cantos arredondados */
+    cursor: pointer; /* Cursor de mão ao passar por cima */
+    font-size: 20px;
+    display: none;
+    width: 200px;
+    font-family: Ninja Naruto V1;
+    margin-top: 40px;
+    margin-left: 820px;
+}
+
+#pontuacao{
+    background-color:rgb(4, 49, 199) ; /* Cor de fundo */
+    color: white; /* Cor do texto */
+    padding: 10px 20px; /* Espaçamento interno */
+    border: none; /* Sem borda */; /* Cantos arredondados */
+    cursor: pointer; /* Cursor de mão ao passar por cima */
+    font-size: 20px;
+    display: none;
+    width: 200px;
+    font-family: Ninja Naruto V1;
+    margin-top: 60px;
+    margin-left: 820px;
+    
 }
 
 .opcoes{
     margin-left: 50px;
     margin-top: 50px;
     width: 515px;
-    
 }
 
 .opcao{
     background-color:orange ; /* Cor de fundo */
-    color: black; /* Cor do texto */
+    color: white; /* Cor do texto */
     padding: 10px 20px; /* Espaçamento interno */
     border: none; /* Sem borda */
     border-radius: 4px; /* Cantos arredondados */
@@ -54,17 +95,40 @@ a {
 }
 
 .opcao:hover{
-    background-color: #12db18;
+    padding-bottom: 50px;
+    padding-top: 50px;
+    border-style: inset;
+    border-color: black;
+    border-radius: 10px;
+    font-size: 30px;
+    text-align: center;
 }
 
 .quiz{
-    margin-bottom: 90px;
     border-style: inset;
     border-radius: 10px;
     background: #12db196b;
     border: none;
+    margin: 0 auto;
+    width: 620px;
+    padding-bottom: 10px;
 }
 
+#voltar{
+    background-color:rgb(4, 49, 199) ; /* Cor de fundo */
+    color: white; /* Cor do texto */
+    padding: 10px 20px; /* Espaçamento interno */
+    border-radius: 10px;
+    border: none; /* Sem borda */; /* Cantos arredondados */
+    cursor: pointer; /* Cursor de mão ao passar por cima */
+    position: relative;
+    font-size: 16px;
+    display: block;
+    width: 200px;
+    font-family: Ninja Naruto V1;
+    margin: 0 auto;
+    margin-top: 40px;
+}
 
 .container {
     background-image: url('../img/NaruSasu.jpg');
@@ -84,12 +148,14 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 10px;
-    display: flex; /* Define o container como um flex container */
+    display: block; /* Define o container como um flex container */
     justify-content: center; /* Centraliza horizontalmente */
     align-items: center; /* Centraliza verticalmente */
+    text-align: center;
     width: 100%; /* Define a largura do container */
     height: 100vh; /* Define a altura do container como 100% da altura da viewport */
     border: 1px; 
+    padding-top:140px;
 }
 
 .botoes{
@@ -100,7 +166,7 @@ a {
 
 .botao{
     background-color:orange ; /* Cor de fundo */
-    color: black; /* Cor do texto */
+    color: white; /* Cor do texto */
     padding: 10px 20px; /* Espaçamento interno */
     border: none; /* Sem borda */
     border-radius: 4px; /* Cantos arredondados */
@@ -113,5 +179,9 @@ a {
 }
 
 .botao:hover{
+    background-color: #12db18;
+}
+
+#voltar:hover{
     background-color: #12db18;
 }
