--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
     width: 200px;
     font-family: Ninja Naruto V1;
     margin-left: 840px;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 #texto{
@@ -84,9 +84,15 @@
     display: none;
     width: 200px;
     font-family: Ninja Naruto V1;
-    /*margin-left: 820px; margin-top: 30px; */
     text-align: center;
 }
+
+#imagem{
+    float: left;
+    margin-top: 60px;
+    margin-left: 200px;
+}
+
 
 .encerramento{
     background:linear-gradient(to bottom right, #FFA500, #FF0000);
@@ -106,12 +112,6 @@
     margin-left: 20px;
 }
 
-#imagem{
-    float: left;
-    margin-top: 60px;
-    margin-left: 90px;
-}
-
 a {
     text-decoration: none;
     color: white;
@@ -128,6 +128,7 @@ body {
     border-radius: 10px;
     border: none;
     width: 400px;
+    background-color: aliceblue;
 }
 
 .alternativas{
@@ -151,7 +152,6 @@ body {
 }
 
 
-
 .opcoes{
     column-count: 2;
     margin-left: 70px;
@@ -167,7 +167,7 @@ body {
     cursor: pointer; 
     font-size: 16px;
     display: block;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     width: 200px;
     font-family: Ninja Naruto V1;
     transition: all 0.3s ease;
@@ -179,8 +179,8 @@ body {
     border: none;
     margin: 0 auto;
     width: 620px;
-    padding-bottom: 10px;
-    margin-top: 130px;
+    padding-bottom: 30px;
+    background-color: aliceblue;
 }
 
 .container {
