--- a/css/style.css
+++ b/css/style.css
@@ -26,15 +26,16 @@
 #resultado{
     background:linear-gradient(to bottom right, #FFA500, #FF0000); 
     color: white; 
-    padding: 10px 20px; 
+    padding: 20px; 
     border: none; 
     cursor: pointer; 
-    font-size: 20px;
+    font-size: 40px;
     display: none;
-    width: 200px;
+    width: 230px;
     font-family: Ninja Naruto V1;
-    margin-left: 840px;
-    margin-top: 20px;
+    float: right;
+    margin-top: 320px;
+    margin-right: 160px;
 }
 
 #texto{
@@ -60,6 +61,7 @@
     width: 600px;
     text-align: center;
     font-size: 26px;
+    margin-top: 40px;
 }
 
 #mensagem {
@@ -89,10 +91,24 @@
 
 #imagem{
     float: left;
-    margin-top: 60px;
+    margin-top: 100px;
     margin-left: 200px;
 }
 
+/*
+#dados{
+    background: linear-gradient(to bottom right, #FFA500, #FF0000);
+    color: white;
+    width: 600px;
+    padding: 10px 10px;
+    margin-left: 640px;
+    margin-top: 170px;
+    font-family: Ninja Naruto V1;
+    text-align: center;
+    border-radius: 3px;
+    display: none;
+}
+*/
 
 .encerramento{
     background:linear-gradient(to bottom right, #FFA500, #FF0000);
@@ -151,11 +167,11 @@ body {
     font-family: Ninja Naruto V1; 
 }
 
-
 .opcoes{
     column-count: 2;
     margin-left: 70px;
-    margin-top: 70px;
+    margin-top: 40px;
+    margin-bottom: 50px;
 }
 
 .opcao{
@@ -173,13 +189,12 @@ body {
     transition: all 0.3s ease;
 }
 
-.quiz{
+.quiz{  
     border-style: inset;
     border-radius: 10px;
     border: none;
-    margin: 0 auto;
+    margin-left: 600px;
     width: 620px;
-    padding-bottom: 30px;
     background-color: aliceblue;
 }
 
@@ -208,6 +223,57 @@ body {
     box-shadow: 6px 6px 12px rgba(17, 17, 17, 0.842);
 }
 
+.sobre{
+    background-image: url(../img/naruto\ sobre.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 10px; 
+    border: 1px;
+    width: 60%;
+    height: 70vh;
+    margin: 0 auto;
+}
+
+.informacoes{
+    width: 350px;
+    background-color: aliceblue;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 80px;
+    margin-right: 40px;
+    padding-bottom: 10px;
+    font-family: Ninja Naruto V1;
+    border-style: inset;
+    border-radius: 6px;
+    border: none;
+}
+
+.informacoes h2{
+    padding: 10px;
+    background:linear-gradient(to bottom right, #FFA500, #FF0000);
+    color: white;
+}
+
+.informacoes a{
+    color: black;
+}
+
+.informacoes a:hover{
+    font-size: 21px;
+}
+
+.referencia:hover{
+    background-color: #3aa0be;
+}
+
+.referencia{
+    background-color: orange;
+    border: none; 
+    border-radius: 4px;
+    padding: 10px;
+    font-family: Ninja Naruto V1;
+}
+
 .botoes{
     padding-top: 50px;
     width: 90px;
@@ -215,12 +281,12 @@ body {
 }
 
 .botao{
-    background-color:orange ; /* Cor de fundo */
-    color: white; /* Cor do texto */
-    padding: 10px 20px; /* Espaçamento interno */
-    border: none; /* Sem borda */
-    border-radius: 4px; /* Cantos arredondados */
-    cursor: pointer; /* Cursor de mão ao passar por cima */
+    background-color:orange;
+    color: white; 
+    padding: 10px 20px; 
+    border: none; 
+    border-radius: 4px; 
+    cursor: pointer; 
     font-size: 16px;
     display: block;
     margin-bottom: 30px;
@@ -249,4 +315,5 @@ body {
     padding: 10px 10px;
     cursor: pointer;
     font-size: 25px;
+    background-color: #3aa0be;
 }
